# statified

./: .gitignore  Mastering Pointers in C.html  start_statified.sh  statified.db
client/src/: App.css  App.jsx  index.css
server/: C-practice  C-practice.c  analyze.py  app.py  practice.ipynb  predictions.csv  predictions.db  predictions.sqbpro  predictions_statified.csv  pyproject.toml  statified.db  update_results.py
server/C-practice.dSYM/Contents/: Info.plist
server/C-practice.dSYM/Contents/Resources/DWARF/: C-practice
server/C-practice.dSYM/Contents/Resources/Relocations/aarch64/: C-practice.yml
server/models/: baseball_stats.py  bullpen.py  expected_runs.py  pitcher.py  probability.py  ratings.py  run_regression_index.py  timezone.py
