[project]
name = "statified-server"
version = "0.1.0"
description = "Statified API"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests>=2.32.5",
  "ipykernel>=7.2.0",
  "pandas>=2.3.3",
  "matplotlib>=3.10.8",
  "jupyter>=1.1.1",
]

[project.scripts]
dev = "uvicorn app:app --reload --host 127.0.0.1 --port 8000"


